# sips

./: README.txt
cross_platform/scripts/: sb_104e_segment_and_acpc  sb_105e_parcellate_brain  sb_301_coregister  sb_302_hfb  sb_303_isotropicT1  sb_304e_segment_and_acpc  sb_305e_parcellate_brain  sb_306e_parcellate_thalamus  sb_307e_parcellate_cingulate  sb_308e_parcellate_cholinergic  sb_avwmaths  sb_avwmaths_16SI  sb_avwmaths_32R  sb_bet  sb_bet_all  sb_convert_xfm  sb_coregister_INtoREF  sb_coregister_INtoREF_withmask  sb_flair_ic  sb_flex  sb_flirt  sb_le  sb_lobmask_tlsub  sb_mtl  sb_nu_correct_analyze  sb_nu_correct_analyze16SI  sb_pdt2seg  sb_pdt2seg_preprocess  sb_reslice_INtoREF
src/flex/Common/: itk_imgio_util_templates.h  itk_imgmath_util_templates.h  itk_imgmorph_util_templates.h  itk_imgops_util_templates.h
src/flex/flex_adf/: CMakeLists.txt  FLEX_adf.cxx
src/flex/flex_fcm/: CMakeLists.txt  FLEX_fcm.cxx  FLEX_fcm.h  main.cxx  utils.h
src/flex/flex_fcm_flair/: CMakeLists.txt  FCM_FLAIR.cxx  FCM_FLAIR_histo.cxx  FCM_FLAIR_histo.h
src/flex/flex_lesionWMT/: CMakeLists.txt  FLEX_lesionWMT.cxx
src/flex/flex_mask/: CMakeLists.txt  FLEX_mask.cxx
src/flex/flex_min/: CMakeLists.txt  FLEX_min.cxx
src/flex/flex_normalize/: CMakeLists.txt  FLEX_norm.cxx
src/flex/flex_to_axial/: CMakeLists.txt  FLEX_to_axial.cxx
src/flex/flex_to_coronal/: CMakeLists.txt  FLEX_to_coronal.cxx
src/flex/flex_zero_norm_voxels/: CMakeLists.txt  FLEX_zero_norm_voxels.cxx
src/fsl/avwutils/: Makefile  avw2ascii++  avw2ascii++.cc  avw2ascii.c  avw2ascii_16SI  avw2ascii_32R  avw2ascii_32SI  avw2ascii_8UI  avwanimate  avwcc++  avwcc++.cc  avwcc.c  avwcc_16SI  avwcc_32SI  avwcc_64R  avwcc_8UI  avwcheck  avwcheck.cc  avwchfiletype  avwchpixdim  avwcomplex  avwcomplex.cc  avwconv  avwconv.cc  avwcpgeom  avwcpgeom++  avwcpgeom++.cc  avwcpgeom.c  avwcreatehd  avwcreatehd++  avwcreatehd++.cc  avwcreatehd.c  avwedithd  avwfft  avwfft.cc  avwfill.c  avwfixfloat.cc  avwhd  avwhd++  avwhd++.cc  (+55 more)
src/fsl/avwutils/doc/: index.html
src/fsl/avwutils/tests/: avw2ascii_test.sh  avwcc_test.sh  avwcpgeom_test.sh  avwcreatehd_test.sh  avwhd_test.sh  avwinterleave_test.sh  avwmaths_test.sh  avwmerge_test.sh  avwnvols_test.sh  avwroi_test.sh  avwsplit_test.sh  header.xml  run_alltests.sh
src/fsl/bet/: Makefile  bet.c  bet.tcl  bet_16SI  bet_32R  bet_32SI  bet_8UI  bet_proc.tcl  betfunc  betpremask  betsmallz
src/fsl/bet/doc/: index.html
src/fsl/bet2/: Makefile  bet2.cpp  betall  betsurf.cpp  betsurf.h
src/fsl/bet2/doc/: index.html
src/fsl/flirt/: Makefile  applyxfm.tcl  applyxfm4D.cc  avscale.cc  concatxfm.tcl  convert_xfm.cc  defaultschedule.h  extracttxt  flirt.cc  flirt.tcl  flirt_proc.tcl  globaloptions.cc  globaloptions.h  img2imgcoord.cc  img2stdcoord.cc  invertxfm.tcl  makerot.cc  midtrans  midtrans.cc  nudge.tcl  pairreg  pointflirt.cc  rmsdiff.cc  scheduleheader.sh  standard_space_roi  std2imgcoord.cc  testcode.cc
src/fsl/flirt/doc/: examples.html  gui.html  gui.xml  index.html  overview.html  schedule.html  schedule.old.html  ztrans.html
src/fsl/flirt/flirtsch/: sch2D_3dof  sch2D_5dof  sch2D_6dof  simple3D.sch  xyztrans.sch  ytransonly.sch  ztransonly.sch
src/sb/Common/: itk_imgio_util_templates.h  itk_imgmorph_util_templates.h  itk_imgops_util_templates.h
src/sb/areslice/: CMakeLists.txt  areslice.cxx
src/sb/atransform/: CMakeLists.txt  atransform.cxx
src/sb/auto_hfb_template/: CMakeLists.txt  auto_hfb_template.cxx
src/sb/combine_hfbs/: CMakeLists.txt  combine_hfbs.cxx
src/sb/dilate2D/: CMakeLists.txt  dilate2D.cxx
src/sb/fill_csf_seg_holes/: CMakeLists.txt  fill_csf_seg_holes.cxx
src/sb/fill_holes_in_acpc_lobmask/: CMakeLists.txt  fill_holes_in_acpc_lobmask.cxx
src/sb/get_datatype/: CMakeLists.txt  get_datatype.cxx
src/sb/img2obj/: CMakeLists.txt  img2obj.cxx  itkAnalyzeObjectLabelMapImageIO.cxx  itkAnalyzeObjectLabelMapImageIO.h  itkAnalyzeObjectLabelMapImageIOFactory.h  itkAnalyzeObjectMap.h
src/sb/imgmath/: CMakeLists.txt  imgmath.cxx
src/sb/legacy_LE/Common/: itk_imgio_util_templates.h  itk_imgmath_util_templates.h  itk_imgmorph_util_templates.h  itk_imgops_util_templates.h
src/sb/legacy_LE/SCSFGM/: CMakeLists.txt  SCSFGM.cxx
src/sb/legacy_LE/keep_large_objects/: CMakeLists.txt  keep_large_objects.cxx
src/sb/make_isotropic/: CMakeLists.txt  make_isotropic.cxx
src/sb/obj2img/: CMakeLists.txt  itkAnalyzeObjectEntry.cxx  itkAnalyzeObjectEntry.h  itkAnalyzeObjectLabelMapImageIO.cxx  itkAnalyzeObjectLabelMapImageIO.h  itkAnalyzeObjectLabelMapImageIOFactory.cxx  obj2img.cxx
src/sb/pdt2seg/: CMakeLists.txt  egRunningStats.cxx  egRunningStats.h  pdt2seg.cxx
src/sb/pdt2seg/Common/: itk_imgmath_util_templates.h
src/sb/pdt2seg/Common/not_updated/: itk_imgmorph_util_templates.h
src/sb/pdt2seg/binlinux/: CMakeCache.txt  Makefile  cmake_install.cmake
src/sb/pdt2seg/binunix/: CMakeCache.txt  Makefile  cmake_install.cmake
src/sb/pdt2seg/binwindows/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  pdt2seg.sln  pdt2seg.vcproj
src/sb/pdt2seg/binwindows/Release/: pdt2seg.exp  pdt2seg.idb  pdt2seg.lib
src/sb/pdt2seg/binwindows/pdt2seg.dir/Debug/: BuildLog.htm  mt.dep
src/sb/pdt2seg/binwindows/pdt2seg.dir/Release/: BuildLog.htm  mt.dep
src/sb/relabel_black_holes/: CMakeLists.txt  relabel_black_holes.cxx
src/sb/relabel_ventricular_wmh/: CMakeLists.txt  relabel_ventricular_wmh.cxx
src/sb/segment_black_holes/: CMakeLists.txt  segment_black_holes.cxx
src/sb/segmentation3T/: 3T_T1seg_v4.cpp  Makefile  analyze_utils.cpp  compile_command.txt  conv.h
src/sblegacy/include_from_cortex/: MyImage.cpp  MyImage.h  MyList.h  MyVolume.cpp  MyVolume.h  analyze_utils.h  bresenhem.h  connexe.c  connexe.h  dbh.h  edge.h  floodfill.cpp  floodfill.h  globals.h  grid3.h  lobe_struct2.h  make_grid.h  typedefs.h
src/sblegacy/src_legacy/include/: analyze_utils.h  analyze_utils_new.h  conv.h
src/sblegacy/src_legacy/src/auto_hfb/: Makefile  auto_hfb_revised.cpp
src/sblegacy/src_legacy/src/lesion_explorer/: Lsegment.cpp  Makefile  (+3 more)
(+55 files in other folders)
